--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		<div class="box">
 			<h3>Informações de contato</h3>
 			<a href="#">+55 (92) 991221-5202</a>
-			<a href="#">danieloliveira.webmaster@gmail.com</a>
+			<a href="#">abc.webmaster@gmail.com</a>
 			<a href="#">Manaus, Brasil - 69090-380</a>
 			<img src="img/payment.png" alt="">
 		</div>
@@ -364,9 +364,3 @@
 
 
 
-<!--
-    Autor: Daniel Oliveira
-    Email: danieloliveira.webmaster@gmail.com
-    Manaus/Amazonas
-    21/04/2022
--->
