--- a/lander.html
+++ b/lander.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-
+<img src="https://raw.githubusercontent.com/neo-aussie/img/refs/heads/main/betus%20lap.png">
 <!-- ======= Header Section/Seção do Cabeçalho ======= -->
 <header>
 	<input type="checkbox" name="" id="toggler">
@@ -36,4 +36,5 @@
 	<script src="js/script.js"></script>
 </body>
 </html>
+
 
